# python-group-theory

./: README.md  pyproject.toml  requirements.txt
src/group_theory/: group.py
tests/: test_group_theory.py
